@@ -7,6 +7,7 @@
 - Can use both PySide and PyQt
 - Removed buttons for adding and deleting tuples
 - Can edit relations within the GUI
+- Migrating to unicode (instead of strings)
 
 1.0
 - Adds history in the GUI
